UI fixes. Removed horizantal scrollbar from event details view

--- a/app/assets/stylesheets/brandscopic.less
+++ b/app/assets/stylesheets/brandscopic.less
@@ -2642,6 +2642,11 @@ body.dashboard.index {
 }
 
 
+#event-contacts.details_box, #event-documents.details_box {
+	overflow: hidden;
+}
+
+
 body.events.show, body.company_users.show, body.teams.show, body.areas.show, body.brand_portfolios.show, body.areas.show {
 	#company_user-areas-list, #company_user-places-list, #event-contacts-list, #event-team-members, #team-members-list, #area-places-list {
 		clear: both;
